detail page added

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -11,24 +11,24 @@
       </a>
     
       <ul class="dropdown-menu overflow-scroll">
-        <li><a class="dropdown-item" href="/pokemon/Flying">Flying</a></li>
-        <li><a class="dropdown-item" href="/pokemon/Rock">Rock</a></li>
-        <li><a class="dropdown-item" href="/pokemon/Water">Water</a></li>
-        <li><a class="dropdown-item" href="/pokemon/Dragon">Dragon</a></li>
-        <li><a class="dropdown-item" href="/pokemon/Ground">Ground</a></li>
-        <li><a class="dropdown-item" href="/pokemon/Ghost">Ghost</a></li>
-        <li><a class="dropdown-item" href="/pokemon/Fighting">Fighting</a></li>
-        <li><a class="dropdown-item" href="/pokemon/Electric">Electric</a></li>
-        <li><a class="dropdown-item" href="/pokemon/Dark">Dark</a></li>
-        <li><a class="dropdown-item" href="/pokemon/Fire">Fire</a></li>
-        <li><a class="dropdown-item" href="/pokemon/Ice">Ice</a></li>
-        <li><a class="dropdown-item" href="/pokemon/Bug">Bug</a></li>
-        <li><a class="dropdown-item" href="/pokemon/Grass">Grass</a></li>
-        <li><a class="dropdown-item" href="/pokemon/Steel">Steel</a></li>
-        <li><a class="dropdown-item" href="/pokemon/Psychic">Psychic</a></li>
-        <li><a class="dropdown-item" href="/pokemon/Normal">Normal</a></li>
-        <li><a class="dropdown-item" href="/pokemon/Poison">Poison</a></li>
-        <li><a class="dropdown-item" href="/pokemon/Fairy">Fairy</a></li>
+        <li><a class="dropdown-item" href="/pokemon/type/Flying">Flying</a></li>
+        <li><a class="dropdown-item" href="/pokemon/type/Rock">Rock</a></li>
+        <li><a class="dropdown-item" href="/pokemon/type/Water">Water</a></li>
+        <li><a class="dropdown-item" href="/pokemon/type/Dragon">Dragon</a></li>
+        <li><a class="dropdown-item" href="/pokemon/type/Ground">Ground</a></li>
+        <li><a class="dropdown-item" href="/pokemon/type/Ghost">Ghost</a></li>
+        <li><a class="dropdown-item" href="/pokemon/type/Fighting">Fighting</a></li>
+        <li><a class="dropdown-item" href="/pokemon/type/Electric">Electric</a></li>
+        <li><a class="dropdown-item" href="/pokemon/type/Dark">Dark</a></li>
+        <li><a class="dropdown-item" href="/pokemon/type/Fire">Fire</a></li>
+        <li><a class="dropdown-item" href="/pokemon/type/Ice">Ice</a></li>
+        <li><a class="dropdown-item" href="/pokemon/type/Bug">Bug</a></li>
+        <li><a class="dropdown-item" href="/pokemon/type/Grass">Grass</a></li>
+        <li><a class="dropdown-item" href="/pokemon/type/Steel">Steel</a></li>
+        <li><a class="dropdown-item" href="/pokemon/type/Psychic">Psychic</a></li>
+        <li><a class="dropdown-item" href="/pokemon/type/Normal">Normal</a></li>
+        <li><a class="dropdown-item" href="/pokemon/type/Poison">Poison</a></li>
+        <li><a class="dropdown-item" href="/pokemon/type/Fairy">Fairy</a></li>
       </ul>
     </div>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
